--- a/Banca_Seguro_Unibe.API/Banca_Seguro_Unibe.API.csproj
+++ b/Banca_Seguro_Unibe.API/Banca_Seguro_Unibe.API.csproj
@@ -1,14 +1,34 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <OutputType>WinExe</OutputType>
+    <UserSecretsId>ac946f0b-ea51-4618-b467-7fc87ac664f6</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.31" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="6.0.1" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
+    <PackageReference Include="System.Linq" Version="4.3.0" />
+    <PackageReference Include="System.Linq.Expressions" Version="4.3.0" />
+    <PackageReference Include="System.Linq.Queryable" Version="4.3.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\capaDatos\capaDatos.csproj" />
+    <ProjectReference Include="..\capaModelo\capaModelos.csproj" />
+    <ProjectReference Include="..\capaNegocios\capaNegocios.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="System.Data.Linq">
+      <HintPath>W:\1_Consultorias\SUGERNET\2_Proyectos\ServicioSegurnet\servicios.api\ServiciosSegurnet.API\bin\Debug\net6.0\System.Data.Linq.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
