--- a/Banca_Seguro_Unibe.API/appsettings.json
+++ b/Banca_Seguro_Unibe.API/appsettings.json
@@ -1,9 +1,21 @@
 {
+  "AllowedHosts": "*",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "JWT": {
+    "Key": "123456",
+    "Issuer": "https://localhost:44360",
+    "Audience": "https://localhost:44360",
+    "Authority": "https://localhost:44360",
+    "Minutes": 5,
+    "IsExpirate": true,
+    "Subject": "Token Web Service - API BANCA SEGURO"
+
+  }
+
+
 }
