JWT + Authentication user - done by o.reyes 26/06/2024

--- a/capaDatos/app.config
+++ b/capaDatos/app.config
@@ -3,8 +3,8 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="capaDatos.Properties.Settings.Db_BancaSeguroConnectionString"
-            connectionString="Data Source=DESKTOP-4NF9L2A\SQLEXPRESS;Initial Catalog=Db_BancaSeguro;Integrated Security=True;Encrypt=True;TrustServerCertificate=True"
+        <add name="capaDatos.Properties.Settings.BancaSeguroMultipleConnectionString"
+            connectionString="Data Source=DESKTOP-4NF9L2A\SQLEXPRESS;Initial Catalog=BancaSeguroMultiple;Integrated Security=True;TrustServerCertificate=True"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
 </configuration>
